# core

./: .gitignore  CHANGELOG.md  Cargo.toml  PKGBUILD  README.md
.github/workflows/: auto-assign.yml
docs/: contributing-and-developing.md  intro.md  usage.md
src/: args.rs  checksum.rs  config.rs  download.rs  finalize.rs  main.rs  patchmeta.rs  rezip.rs  sign.rs  unzip.rs  utils.rs
test/: ROMMER.yaml  test_cert.x509.pem  test_key.p8
test/patches/custom_bootanimation_patch/: .rommerfdel  patch.yaml
test/patches/custom_bootanimation_patch/app/: doom.js
test/scripts/: pre_download.sh  pre_run.sh
