[package]
name = "rommer"
description = "A powerful tool designed to customize Android ROM ZIP files without building from source."
repository = "https://github.com/TheROMMER/core"
homepage = "https://github.com/TheROMMER/core"
license-file = "LICENSE"
authors = ["neoapps-dev"]
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
indicatif = "0.18.3"
reqwest = { version = "0.12.26", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
sha2 = "0.10.8"
walkdir = "2.5.0"
zip = "6.0.0"
regex = "1.12.2"
