[package]
name = "rommer"
description = "A powerful tool designed to customize Android ROM ZIP files without building from source."
repository = "https://github.com/TheROMMER/core"
homepage = "https://github.com/TheROMMER/core"
license-file = "LICENSE"
authors = ["neoapps-dev"]
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
futures-util = "0.3.32"
indicatif = "0.18.4"
reqwest = { version = "0.13.2", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
shellexpand = "3.1.2"
tempfile = "3.26.0"
tokio = { version = "1.49.0", features = ["full"] }
sha2 = "0.10.8"
walkdir = "2.5.0"
zip = "8.2.0"
regex = "1.12.3"
